--- a/bio_link/pubspec.yaml
+++ b/bio_link/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - C:/Códigos VSCODE/Dart-Hub/bio_link/lib/assets/Sol.gif
+    - C:/Códigos VSCODE/Dart-Hub/bio_link/lib/assets/Constelação.gif
 
   #   - images/a_dot_ham.jpeg
 
